Truncate teams on fixtures inline

--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -3809,6 +3809,10 @@ figure.figure-wide img {
     #football .football-tabs-stats .football-fixtures .football-match .football-match-score {
       color: #676767;
       text-align: center; }
+    #football .football-tabs-stats .football-fixtures .football-match .football-match-home, #football .football-tabs-stats .football-fixtures .football-match .football-match-away {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis; }
   #football .football-tabs-stats .football-table .football-table-entry {
     border-top: 1px solid #f6f6f6; }
     #football .football-tabs-stats .football-table .football-table-entry > div {
